--- a/res/xml/app_profile.xml
+++ b/res/xml/app_profile.xml
@@ -22,6 +22,48 @@
     xmlns:lineage="http://schemas.android.com/apk/res-auto"
     android:title="@string/app_profile_title">
 
+        <ListPreference
+            android:key="app_profile_performance"
+            android:title="@string/app_profile_performance_title"
+            android:entries="@array/performance_listentries"
+            android:entryValues="@array/performance_listvalues" 
+            android:defaultValue="default"
+            android:summary="%s"/>
+
+        <ListPreference
+            android:key="app_profile_thermal"
+            android:title="@string/app_profile_thermal_title"
+            android:entries="@array/thermal_listentries"
+            android:entryValues="@array/thermal_listvalues"
+            android:defaultValue="default"
+            android:summary="%s" />
+
+        <ListPreference
+            android:key="app_profile_spoof"
+            android:title="@string/app_profile_spoof_title"
+            android:entries="@array/spoof_listentries"
+            android:entryValues="@array/spoof_listvalues"
+            android:defaultValue="default"
+            android:summary="%s" />
+
+        <SwitchPreference
+            android:key="app_profile_bypass_charging"
+            android:title="@string/app_profile_bypass_charging_title"
+            android:summary="@string/app_profile_bypass_charging_summary"
+            android:defaultValue="false" />
+
+        <ListPreference
+            android:key="app_profile_min_fps"
+            android:title="@string/app_profile_min_fps_title"
+            android:defaultValue="0"
+            android:summary="%s" />
+
+        <ListPreference
+            android:key="app_profile_max_fps"
+            android:title="@string/app_profile_max_fps_title"
+            android:defaultValue="0"
+            android:summary="%s" />
+
         <SwitchPreference
             android:key="app_profile_pinned"
             android:title="@string/app_profile_pinned_title"
@@ -34,12 +76,6 @@
             android:summary="@string/app_profile_donotclose_summary"
             android:defaultValue="false" />
 
-        <SwitchPreference
-            android:key="app_profile_disable_boot"
-            android:title="@string/app_profile_disable_title"
-            android:summary="@string/app_profile_disable_summary"
-            android:defaultValue="false" />
-
         <ListPreference
             android:key="app_profile_background"
             android:title="@string/app_profile_background_title"
@@ -49,22 +85,22 @@
             android:summary="%s"/>
 
         <SwitchPreference
+            android:key="app_profile_allowwhileidle"
+            android:title="@string/app_profile_allowwhileidle_title"
+            android:summary="@string/app_profile_allowwhileidle_summary"
+            android:defaultValue="false" />
+
+        <SwitchPreference
+            android:key="app_profile_idle_network"
+            android:title="@string/app_profile_idle_network_title"
+            android:summary="@string/app_profile_idle_network_summary"
+            android:defaultValue="false" />
+
+        <SwitchPreference
             android:key="app_profile_stamina"
             android:title="@string/app_profile_stamina_title"
             android:summary="@string/app_profile_stamina_summary"
             android:defaultValue="false" />
-
-        <SwitchPreference
-            android:key="app_profile_disable_wakeup"
-            android:title="@string/app_profile_disable_wakeup_title"
-            android:summary="@string/app_profile_disable_wakeup_summary"
-            android:defaultValue="false" />
-
-        <!-- SwitchPreference
-            android:key="app_profile_disable_jobs"
-            android:title="@string/app_profile_disable_jobs_title"
-            android:summary="@string/app_profile_disable_jobs_summary"
-            android:defaultValue="false" / -->
 
         <SwitchPreference
             android:key="app_profile_freezer"
@@ -73,9 +109,36 @@
             android:defaultValue="false" />
 
         <SwitchPreference
-            android:key="app_profile_idle_network"
-            android:title="@string/app_profile_idle_network_title"
-            android:summary="@string/app_profile_idle_network_summary"
+            android:key="app_profile_keep_on"
+            android:title="@string/app_profile_keep_on_title"
+            android:summary="@string/app_profile_keep_on_summary"
+            android:defaultValue="false" />
+
+        <ListPreference
+            android:key="app_profile_reader"
+            android:title="@string/app_profile_reader_title"
+            android:summary="@string/app_profile_reader_summary"
+            android:entries="@array/super_saver_listentries"
+            android:entryValues="@array/super_saver_listvalues"
+            android:defaultValue="0"
+            android:persistent="false" />
+
+        <SwitchPreference
+            android:key="app_profile_disable_boot"
+            android:title="@string/app_profile_disable_title"
+            android:summary="@string/app_profile_disable_summary"
+            android:defaultValue="false" />
+
+        <SwitchPreference
+            android:key="app_profile_disable_wakeup"
+            android:title="@string/app_profile_disable_wakeup_title"
+            android:summary="@string/app_profile_disable_wakeup_summary"
+            android:defaultValue="false" />
+
+        <SwitchPreference
+            android:key="app_profile_hide_idle"
+            android:title="@string/app_profile_hide_idle_title"
+            android:summary="@string/app_profile_hide_idle_summary"
             android:defaultValue="false" />
 
         <ListPreference
@@ -99,28 +162,6 @@
             android:defaultValue="false" />
 
         <ListPreference
-            android:key="app_profile_performance"
-            android:title="@string/app_profile_performance_title"
-            android:entries="@array/performance_listentries"
-            android:entryValues="@array/performance_listvalues" 
-            android:defaultValue="default"
-            android:summary="%s"/>
-
-        <ListPreference
-            android:key="app_profile_thermal"
-            android:title="@string/app_profile_thermal_title"
-            android:entries="@array/thermal_listentries"
-            android:entryValues="@array/thermal_listvalues"
-            android:defaultValue="default"
-            android:summary="%s" />
-
-        <SwitchPreference
-            android:key="app_profile_bypass_charging"
-            android:title="@string/app_profile_bypass_charging_title"
-            android:summary="@string/app_profile_bypass_charging_summary"
-            android:defaultValue="false" />
-
-        <ListPreference
             android:key="app_profile_brightness"
             android:title="@string/app_profile_brightness_title"
             android:entries="@array/brightness_listentries"
@@ -136,96 +177,26 @@
             android:defaultValue="default"
             android:summary="%s" />
 
-        <!-- SwitchPreference
-            android:key="app_profile_full_screen"
-            android:title="@string/app_profile_full_screen_title"
-            android:summary="@string/app_profile_full_screen_summary"
-            android:defaultValue="false" / -->
-
-        <ListPreference
-            android:key="app_profile_min_fps"
-            android:title="@string/app_profile_min_fps_title"
+        <!-- ListPreference
+            android:key="app_profile_scalefactor"
+            android:title="@string/app_profile_scalefactor_title"
+            android:entries="@array/app_scalefactor_listentries"
+            android:entryValues="@array/app_scalefactor_listvalues"
             android:defaultValue="0"
-            android:summary="%s" />
+            android:summary="%s" / -->
 
-        <ListPreference
-            android:key="app_profile_max_fps"
-            android:title="@string/app_profile_max_fps_title"
-            android:defaultValue="0"
-            android:summary="%s" />
-
-        <!-- SwitchPreference
-            android:key="app_profile_require_gms"
-            android:title="@string/app_profile_require_gms_title"
-            android:summary="@string/app_profile_require_gms_summary"
-            android:defaultValue="false" / -->
-
-        <ListPreference
-            android:key="app_profile_reader"
-            android:title="@string/app_profile_reader_title"
-            android:summary="@string/app_profile_reader_summary"
-            android:entries="@array/super_saver_listentries"
-            android:entryValues="@array/super_saver_listvalues"
-            android:defaultValue="0"
-            android:persistent="false" />
 
         <SwitchPreference
-            android:key="app_profile_keep_on"
-            android:title="@string/app_profile_keep_on_title"
-            android:summary="@string/app_profile_keep_on_summary"
+            android:key="app_profile_block_overlays"
+            android:title="@string/app_profile_block_overlays_title"
+            android:summary="@string/app_profile_block_overlays_summary"
             android:defaultValue="false" />
-
-        <!-- ListPreference
-            android:key="app_profile_location"
-            android:title="@string/app_profile_location_title"
-            android:entries="@array/location_listentries"
-            android:entryValues="@array/location_listvalues"
-            android:defaultValue="0"
-            android:summary="%s" / -->
-
-        <!-- ListPreference
-            android:key="app_profile_camera"
-            android:title="@string/app_profile_camera_title"
-            android:entries="@array/camera_listentries"
-            android:entryValues="@array/camera_listvalues"
-            android:defaultValue="0"
-            android:summary="%s" / -->
-
-        <!-- ListPreference
-            android:key="app_profile_microphone"
-            android:title="@string/app_profile_microphone_title"
-            android:entries="@array/microphone_listentries"
-            android:entryValues="@array/microphone_listvalues"
-            android:defaultValue="0"
-            android:summary="%s" / -->
-
-        <ListPreference
-            android:key="app_profile_spoof"
-            android:title="@string/app_profile_spoof_title"
-            android:entries="@array/spoof_listentries"
-            android:entryValues="@array/spoof_listvalues"
-            android:defaultValue="default"
-            android:summary="%s" />
-
-        <!-- ListPreference
-            android:key="app_profile_language"
-            android:title="@string/app_profile_language_title"
-            android:entries="@array/language_listentries"
-            android:entryValues="@array/language_listvalues"
-            android:defaultValue="default"
-            android:summary="%s" / -->
 
         <SwitchPreference
             android:key="app_profile_override_fonts"
             android:title="@string/app_profile_override_fonts_title"
             android:summary="@string/app_profile_override_fonts_summary"
             android:defaultValue="false" />
-
-        <!-- SwitchPreference
-            android:key="app_profile_lowres"
-            android:title="@string/app_profile_lowres_title"
-            android:summary="@string/app_profile_lowres_summary"
-            android:persistent="false" / -->
 
         <SwitchPreference
             android:key="app_profile_phka"
@@ -239,23 +210,19 @@
             android:summary="@string/app_profile_devmode_summary"
             android:persistent="false" />
 
-
-
         <SwitchPreference
             android:key="app_profile_forced_screenshot"
             android:title="@string/app_profile_forced_screenshot_title"
             android:summary="@string/app_profile_forced_screenshot_summary"
             android:defaultValue="false" />
 
-        <!-- com.aicp.gear.preference.SeekBarPreferenceCham
-            android:key="app_profile_volume_scale"
-            android:title="@string/app_profile_volume_scale_title"
-            android:max="100"
-            android:min="-1"
-            aicpextras:unitsLeft=""
-            aicpextras:unitsRight=""
-            android:defaultValue="-99999"/ -->
-
+        <ListPreference
+            android:key="app_profile_force_sonification"
+            android:title="@string/app_sound_sonif_a2dp_title"
+            android:entries="@array/app_sonif_a2dp_listentries"
+            android:entryValues="@array/app_sonif_a2dp_listvalues"
+            android:defaultValue="0"
+            android:summary="%s" />
 
         <SwitchPreference
             android:key="app_profile_block_focus_recv"
@@ -275,20 +242,6 @@
             android:summary="@string/app_profile_force_sonification_summary"
             android:defaultValue="false" / -->
 
-        <ListPreference
-            android:key="app_profile_force_sonification"
-            android:title="@string/app_sound_sonif_a2dp_title"
-            android:entries="@array/app_sonif_a2dp_listentries"
-            android:entryValues="@array/app_sonif_a2dp_listvalues"
-            android:defaultValue="0"
-            android:summary="%s" />
-
-        <SwitchPreference
-            android:key="app_profile_block_overlays"
-            android:title="@string/app_profile_block_overlays_title"
-            android:summary="@string/app_profile_block_overlays_summary"
-            android:defaultValue="false" />
-
         <SwitchPreference
             android:key="app_profile_hide_hms"
             android:title="@string/app_profile_hide_hms_title"
@@ -301,17 +254,33 @@
             android:summary="@string/app_profile_hide_gms_summary"
             android:defaultValue="false"/>
 
-        <!--SwitchPreference
+        <SwitchPreference
             android:key="app_profile_hide_3p"
             android:title="@string/app_profile_hide_3p_title"
             android:summary="@string/app_profile_hide_3p_summary"
-            android:defaultValue="false"/-->
+            android:defaultValue="false"/>
 
         <SwitchPreference
             android:key="app_profile_debug"
             android:title="@string/app_profile_debug_title"
             android:summary="@string/app_profile_debug_summary"
             android:defaultValue="false" />
+
+        <ListPreference
+            android:key="app_profile_installer"
+            android:title="@string/app_profile_installer_title"
+            android:entries="@array/app_installer_listentries"
+            android:entryValues="@array/app_installer_listvalues"
+            android:defaultValue="0"
+            android:summary="%s" />
+
+        <SwitchPreference
+            android:key="app_profile_old_links"
+            android:title="@string/app_profile_old_links_title"
+            android:summary="@string/app_profile_old_links_summary"
+            android:defaultValue="false" />
+
+
 
     <PreferenceCategory
         android:key="app_profile_boot_options"
@@ -368,5 +337,73 @@
     	    android:key="app_backup_restore_restore"
     	    android:title="@string/app_backup_restore_restore_title"
             android:summary="@string/app_backup_restore_restore_summary"/ -->
+
+        <!-- SwitchPreference
+            android:key="app_profile_full_screen"
+            android:title="@string/app_profile_full_screen_title"
+            android:summary="@string/app_profile_full_screen_summary"
+            android:defaultValue="false" / -->
+
+
+        <!-- SwitchPreference
+            android:key="app_profile_require_gms"
+            android:title="@string/app_profile_require_gms_title"
+            android:summary="@string/app_profile_require_gms_summary"
+            android:defaultValue="false" / -->
+
+        <!-- ListPreference
+            android:key="app_profile_location"
+            android:title="@string/app_profile_location_title"
+            android:entries="@array/location_listentries"
+            android:entryValues="@array/location_listvalues"
+            android:defaultValue="0"
+            android:summary="%s" / -->
+
+        <!-- ListPreference
+            android:key="app_profile_camera"
+            android:title="@string/app_profile_camera_title"
+            android:entries="@array/camera_listentries"
+            android:entryValues="@array/camera_listvalues"
+            android:defaultValue="0"
+            android:summary="%s" / -->
+
+        <!-- ListPreference
+            android:key="app_profile_microphone"
+            android:title="@string/app_profile_microphone_title"
+            android:entries="@array/microphone_listentries"
+            android:entryValues="@array/microphone_listvalues"
+            android:defaultValue="0"
+            android:summary="%s" / -->
+
+        <!-- SwitchPreference
+            android:key="app_profile_disable_jobs"
+            android:title="@string/app_profile_disable_jobs_title"
+            android:summary="@string/app_profile_disable_jobs_summary"
+            android:defaultValue="false" / -->
+
+
+        <!-- ListPreference
+            android:key="app_profile_language"
+            android:title="@string/app_profile_language_title"
+            android:entries="@array/language_listentries"
+            android:entryValues="@array/language_listvalues"
+            android:defaultValue="default"
+            android:summary="%s" / -->
+
+        <!-- SwitchPreference
+            android:key="app_profile_lowres"
+            android:title="@string/app_profile_lowres_title"
+            android:summary="@string/app_profile_lowres_summary"
+            android:persistent="false" / -->
+
+        <!-- com.aicp.gear.preference.SeekBarPreferenceCham
+            android:key="app_profile_volume_scale"
+            android:title="@string/app_profile_volume_scale_title"
+            android:max="100"
+            android:min="-1"
+            aicpextras:unitsLeft=""
+            aicpextras:unitsRight=""
+            android:defaultValue="-99999"/ -->
+
 
 </PreferenceScreen>
