--- a/res/values-ru-rRU/smart_trust_strings.xml
+++ b/res/values-ru-rRU/smart_trust_strings.xml
@@ -10,6 +10,9 @@
     <string name="trust_always_title">Доверять всегда</string>
     <string name="trust_always_summary">Удерживать устройство разблокированным до ручной блокировки или таймаута 4 часа</string>
 
+    <string name="trust_incall_title">Доверять при звонке</string>
+    <string name="trust_incall_summary">Удерживать устройство разблокированным при активном вызове</string>
+
     <string name="trust_bt_dev_title">Устройства Bluetooth</string>
     <string name="trust_bt_dev_summary">Устройства Bluetooth при соединении с которыми устройство будет оставаться разблокированным</string>
 
