--- a/res/values/powersave_strings.xml
+++ b/res/values/powersave_strings.xml
@@ -55,7 +55,6 @@
     <string name="powersave_gms_defer_jobs_title">Defer Jobs</string>
     <string name="powersave_gms_defer_jobs_summary">Defer GMS background jobs until on charger</string>
 
-
     <!-- Batery whitelist -->
     <string name="prefs_battery_saver_title">Whitelist</string>
     <string name="prefs_battery_saver_summary">Device Whitelist</string>
@@ -81,7 +80,6 @@
     <string name="baikalos_alarms_nowake_title">Disable Wakeups</string>
     <string name="baikalos_alarms_nowake_summary">Disable wakeups from user apps by default</string>
 
-
     <string name="device_profiles_title">Device profiles</string>
     <string name="powesaver_title">Power Saver</string>
 
@@ -96,5 +94,27 @@
     <string name="powesaver_aggressive">Aggressive</string>
     <string name="powesaver_extreme">Extreme</string>
 
+    <string name="baikalos_auto_limit_title">Auto limit</string>
+    <string name="baikalos_auto_limit_summary">Limit background apps activities by default on moderate, aggressive and extreme powersaving profiles</string>
+
+    <string name="ps_none_title">Default</string>
+    <string name="ps_none_summary"></string>
+    <string name="ps_low_title">Low</string>
+    <string name="ps_low_summary"></string>
+    <string name="ps_moderate_title">Moderate</string>
+    <string name="ps_moderate_summary"></string>
+    <string name="ps_aggressive_title">Aggressive</string>
+    <string name="ps_aggressive_summary"></string>
+    <string name="ps_extreme_title">Extreme</string>
+    <string name="ps_extreme_summary"></string>
+    <string name="ps_bs_title">Battery Saver</string>
+    <string name="ps_bs_summary"></string>
+    <string name="ps_stamina_title">Stamina</string>
+    <string name="ps_stamina_summary"></string>
+
+    <string name="baikalos_power_profiles_editor_title">PowerSaver Profiles</string>
+    <string name="baikalos_power_profiles_editor_summary">Customize power saver profiles</string>
+
+    <string name="baikalos_ps_editor_title">Power profile</string>
 
 </resources>
