--- a/res/values/smart_trust_strings.xml
+++ b/res/values/smart_trust_strings.xml
@@ -10,6 +10,9 @@
     <string name="trust_always_title">Always Trust</string>
     <string name="trust_always_summary">Keep device unlocked until manually locked or Trust timeout (4 hours)</string>
 
+    <string name="trust_incall_title">Trust In Call</string>
+    <string name="trust_incall_summary">Keep device unlocked while phone call is active</string>
+
     <string name="trust_bt_dev_title">Bluetooth Devices</string>
     <string name="trust_bt_dev_summary">Bluetooth Devices to keep device unlocked</string>
 
