Pulse Notification Timeout [2/2]
Change-Id: I92567eb8faed5d51524f080a689d1568727f0b77

--- a/res/values-ru-rRU/baikal_strings.xml
+++ b/res/values-ru-rRU/baikal_strings.xml
@@ -181,4 +181,7 @@
     <string name="baikalos_expand_all_notifications_title">Раскрывать все</string>
     <string name="baikalos_expand_all_notifications_summary">Показывать все несгруппированные сообщения раскрытыми</string>
 
+    <string name="baikalos_pulse_duration_tile">Длительность уведомления</string>
+    <string name="baikalos_pulse_duration_summary">Время удержания экрана при показе пульсирующих уведомлений</string>
+
 </resources>
