--- a/res/xml/doze_settings.xml
+++ b/res/xml/doze_settings.xml
@@ -46,6 +46,36 @@
         android:title="@string/pulse_on_new_tracks_title"
         android:summary="@string/pulse_on_new_tracks_summary" />
 
+    <com.crdroid.settings.preferences.SystemSettingSeekBarPreference
+            android:key="baikalos_pulse_duration"
+            android:title="@string/baikalos_pulse_duration_tile"
+            android:summary="@string/baikalos_pulse_duration_summary"
+            android:defaultValue="6"
+            android:max="600"
+            settings:min="0"
+            settings:interval="1"
+            settings:units="@string/unit_seconds" />
+
+    <!-- com.crdroid.settings.preferences.SystemSettingSeekBarPreference
+            android:key="baikalos_pulse_duration_in"
+            android:title="@string/baikalos_pulse_duration_in_tile"
+            android:summary="@string/baikalos_pulse_duration_in_summary"
+            android:defaultValue="130"
+            android:max="1200"
+            settings:min="0"
+            settings:interval="10"
+            settings:units="@string/unit_milliseconds" />
+
+    <com.crdroid.settings.preferences.SystemSettingSeekBarPreference
+            android:key="baikalos_pulse_duration_out"
+            android:title="@string/baikalos_pulse_duration_out_tile"
+            android:summary="@string/baikalos_pulse_duration_out_summary"
+            android:defaultValue="600"
+            android:max="1200"
+            settings:min="0"
+            settings:interval="10"
+            settings:units="@string/unit_milliseconds" / -->
+
     <Preference
         android:key="edge_light_settings"
         android:title="@string/edge_light_title"
